# aleph-tezos-event-indexer

./: .dockerignore  .env.default  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml
deploy/: deploy.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml
src/: config.py  indexer.py
src/graphql/: server.py
src/graphql/schema/: types.py
src/storage/: common.py  event.py
src/tezos/: client.py
src/utils/: aleph_balance_tracker.py  common.py
