[tool.poetry]
name = "aleph-tezos-event-indexer"
version = "0.0.1"
description = ""
authors = ["Charaf ZELLOU <charaf.zellou@smart-chain.fr>"]
readme = "README.md"
packages = [{include = "aleph_tezos_event_indexer"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
